# sltree

./: MANIFEST.in  README.md  pyproject.toml  setup.py
csrc/categorizer/: Makefile  categorizer_core.c  kmeans.c  kmeans.h  kmeans_init.c  kmeans_metrics.c  libcategorizer.dylib
csrc/lbtree/: Makefile  lbtree_core.c  lbtree_core.h
csrc/slbt/: Makefile  libslbt.dylib  linalg.c  slbt.h  slbt_als.c  slbt_als.h  slbt_core.c
lbtree/: __init__.py  adaboost.py  base.py  binpi.py  forest.py  plotting.py  reporting.py  sctree.py  sctree_weighted.py  slbt.py
lbtree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lbtree/_backend/: _lbtree.py  _slbt.py  liblbtree.dylib
lbtree/_preprocessing/: __init__.py  categorizer.py
lbtree/_preprocessing/_backend/: __init__.py  _categorizer.py
lbtree/_tree/: split.py
lbtree/_tree/_homogeneity/: A.py  AB.py  B.py  base.py  none.py
lbtree/_utils/: criteria.py  utils.py
